infrastructure/kubernetes/raw-manifests/kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: enforce
  rules:
  - name: privileged-containers
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Privileged containers are not allowed"
      pattern:
        spec:
          containers:
          - securityContext:
              privileged: "false"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  validationFailureAction: enforce
  rules:
  - name: resource-limits
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Resource limits are required"
      pattern:
        spec:
          containers:
          - resources:
              limits:
                memory: "?*"
                cpu: "?*"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-hostpath-volumes
spec:
  validationFailureAction: enforce
  rules:
  - name: hostpath-volumes
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "HostPath volumes are not allowed"
      pattern:
        spec:
          volumes:
          - hostPath: "null"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-pull-policy
spec:
  validationFailureAction: enforce
  rules:
  - name: image-pull-policy
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Image pull policy must be Always or IfNotPresent"
      pattern:
        spec:
          containers:
          - imagePullPolicy: "Always|IfNotPresent"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: enforce
  rules:
  - name: latest-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Latest tag is not allowed"
      pattern:
        spec:
          containers:
          - image: "!*latest*"
